--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@conform-to/react": "^1.2.2",
+    "@conform-to/zod": "^1.2.2",
     "@internationalized/date": "^3.6.0",
     "@nextui-org/react": "^2.6.8",
     "@prisma/client": "^6.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
-    "next": "13.5.7",
+    "next": "^14.2.22",
     "prisma": "^6.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
